# Robocup-Tawan_pee-

./: README.md
install/: local_setup.sh  setup.sh
install/csm/gsl_eigen/: gsl_eigen.h
install/csm/include/csm/: algos.h  csm.h  laser_data.h  laser_data_inline.h  restrict.h
install/csm/share/csm/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/ired_aruco/share/ired_aruco/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.ps1  package.sh  package.xml
install/ired_bringup/include/: modbus_rtu.hpp
install/ired_bringup/include/ired_bringup/: forward_kinematics.hpp  imu.hpp  inverse_kinematics.hpp  ired_controller.hpp  ired_controller_define.hpp  odom.hpp
install/ired_bringup/lib/ired_bringup/: forward_kinematics_node  imu_node  inverse_kinematics_node  iredcr_modbus_node  odom_node
install/ired_bringup/share/ired_bringup/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/ired_movetogoal/lib/ired_movetogoal/: movetogoal
install/ired_movetogoal/share/ired_movetogoal/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/ired_msgs/share/ired_msgs/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  (+2 more)
log/: latest_build
src/: hokuyo.launch.py
src/aruco_marker/: .gitmodules
src/aruco_marker/ired_aruco/: .gitignore  CMakeLists.txt  package.xml  station_identifier.py
src/aruco_marker/ired_aruco/config/camera_calibration/: ost.txt  ost.yaml
src/aruco_marker/ired_aruco/launch/: aruco_detect.launch.py
src/aruco_marker/ired_aruco/rviz/: aruco.rviz
src/install/: local_setup.sh  setup.bash  setup.sh
src/lidar_bringup/: CMakeLists.txt
src/lidar_bringup/launch/: hokuyo_launch.py
src/log/: latest_build
src/robot/ired_movetogoal/: LICENSE  README.md  package.xml  setup.cfg  setup.py
src/robot/motion_control/: package.xml  setup.py
src/station_manager/: setup.cfg  setup.py
src/station_pkg/: setup.py
(+600 files in other folders)
