<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ired_aruco</name>
  <version>2.0.1</version>
  <description>
    iRED ArUco: This package is used to detect and decode ArUco markers.
  </description>
  <maintainer email="aimslabkmitl@gmail.com">AIMs Lab, KMITL</maintainer>
  <author email="t.thepsit@gmail.com">T. Thepsit</author>
  <license>Apache-2.0</license>
  <url type="website">https://aimslab.kmitl.ac.th</url>
  <url type="repository">https://gitlab.raikmitl.com/ired/ired_aruco.git</url>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>rviz2</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
